--- a/vATIS.Desktop/Ui/Windows/CompactWindow.axaml
+++ b/vATIS.Desktop/Ui/Windows/CompactWindow.axaml
@@ -4,10 +4,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:Vatsim.Vatis.Ui.ViewModels"
         xmlns:converter="using:Vatsim.Vatis.Ui.Converters"
+        xmlns:behaviors="using:Vatsim.Vatis.Ui.Behaviors"
         mc:Ignorable="d"
         x:Name="Window"
         x:Class="Vatsim.Vatis.Ui.Windows.CompactWindow"
-        MinHeight="50"
+        MinHeight="30"
         MinWidth="100"
         MaxWidth="400"
         SizeToContent="WidthAndHeight"
@@ -40,9 +41,17 @@
                         <StackPanel Orientation="Horizontal" Spacing="5">
                             <Grid ColumnDefinitions="65,10,60,10,Auto,15,Auto">
                                 <TextBlock Grid.Column="0" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Foreground="White" Text="{Binding TabText, DataType=vm:AtisStationViewModel}" />
-                                <TextBlock Grid.Column="2" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium">
-                                    <Run Text="{Binding AtisLetter, DataType=vm:AtisStationViewModel}" Foreground="{Binding NetworkConnectionStatus, DataType=vm:AtisStationViewModel, Converter={StaticResource AtisLetterColorConverter}, FallbackValue=Aqua}" /> <Run Text="{Binding ObservationTime, DataType=vm:AtisStationViewModel}" Foreground="White" />
-                                </TextBlock>
+                                <StackPanel Grid.Column="2" Orientation="Horizontal" Spacing="5">
+                                    <TextBlock Name="AtisLetter" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding AtisLetter, DataType=vm:AtisStationViewModel}" Foreground="{Binding NetworkConnectionStatus, DataType=vm:AtisStationViewModel, Converter={StaticResource AtisLetterColorConverter}, FallbackValue=Aqua}" Cursor="Hand">
+                                        <Interaction.Behaviors>
+                                            <RoutedEventTriggerBehavior RoutedEvent="{x:Static InputElement.PointerPressedEvent}" SourceInteractive="AtisLetter">
+                                                <InvokeCommandAction Command="{Binding AcknowledgeAtisUpdateCommand, DataType=vm:AtisStationViewModel}"/>
+                                            </RoutedEventTriggerBehavior>
+                                            <behaviors:BlinkingTextBehavior IsBlinking="{Binding IsNewAtis, DataType=vm:AtisStationViewModel}"/>
+                                        </Interaction.Behaviors>
+                                    </TextBlock>
+                                    <TextBlock Text="{Binding ObservationTime, DataType=vm:AtisStationViewModel}" Foreground="White" FontSize="15" FontWeight="Medium"/>
+                                </StackPanel>
                                 <TextBlock Grid.Column="4" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding Altimeter, DataType=vm:AtisStationViewModel}" Foreground="White"/>
                                 <TextBlock Grid.Column="6" FontFamily="{StaticResource Monospace}" FontSize="15" FontWeight="Medium" Text="{Binding Wind, DataType=vm:AtisStationViewModel}" Foreground="White"/>
                             </Grid>
