--- a/vATIS.Desktop/Ui/Dialogs/ReleaseNotesDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/ReleaseNotesDialog.axaml
@@ -15,7 +15,7 @@
         SystemDecorations="None"
         TransparencyLevelHint="Transparent"
         Background="Transparent">
-    <Border BorderBrush="#646464" BorderThickness="1" Background="#1E1E1E" CornerRadius="5" Opacity="0.95">
+    <Border BorderBrush="#646464" BorderThickness="1" Background="#1E1E1E" CornerRadius="5">
         <Grid RowDefinitions="*,10,Auto" Margin="15">
             <mdxaml:MarkdownScrollViewer Grid.Row="0" Margin="0 -10 0 0" Markdown="{Binding ReleaseNotes, DataType=vm:ReleaseNotesDialogViewModel}">
                 <mdxaml:MarkdownScrollViewer.Styles>
