--- a/vATIS.Desktop/Ui/Dialogs/SortAtisStationsDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/SortAtisStationsDialog.axaml
@@ -4,9 +4,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:Vatsim.Vatis.Ui.ViewModels"
         xmlns:behaviors="clr-namespace:Vatsim.Vatis.Ui.Behaviors"
-        mc:Ignorable="d"
-        x:Class="Vatsim.Vatis.Ui.Dialogs.SortPresetsDialog"
-        Title="SortPresetsDialog"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        x:Class="Vatsim.Vatis.Ui.Dialogs.SortAtisStationsDialog"
+        Title="SortAtisStationsDialog"
         x:Name="Window"
         Width="570" MaxHeight="325"
         SizeToContent="Height"
@@ -16,7 +16,7 @@
         SystemDecorations="None"
         TransparencyLevelHint="Transparent"
         Background="Transparent">
-	<Window.Resources>
+    <Window.Resources>
 		<SolidColorBrush x:Key="TreeDataGridSelectedCellBackgroundBrush" Color="Black" Opacity="0.3" />
 	</Window.Resources>
 	<Border BorderBrush="#646464" BorderThickness="1" Background="#323232" CornerRadius="5">
@@ -24,11 +24,11 @@
 				<Border CornerRadius="5,5,0,0" Background="#282828" Height="40" PointerPressed="OnPointerPressed">
 					<Grid ColumnDefinitions="1*,1*">
 						<TextBlock Text="Sort Presets" Padding="5" Margin="5,0,0,0" VerticalAlignment="Center" Foreground="#F0F0F0" FontWeight="Medium" FontSize="14" Grid.Column="0" />
-						<Button Grid.Column="1" Theme="{StaticResource CloseButton}" HorizontalAlignment="Right" Margin="0,0,10,0" Command="{Binding CloseWindowCommand, DataType=vm:SortPresetsDialogViewModel}" CommandParameter="{Binding ElementName=Window}"/>
+						<Button Grid.Column="1" Theme="{StaticResource CloseButton}" HorizontalAlignment="Right" Margin="0,0,10,0" Command="{Binding CloseWindowCommand, DataType=vm:SortAtisStationsDialogViewModel}" CommandParameter="{Binding ElementName=Window}"/>
 					</Grid>
 				</Border>
 				<Grid ColumnDefinitions="1*,10,80" Margin="20">
-					<TreeDataGrid Grid.Column="0" CornerRadius="5" BorderBrush="#646464" BorderThickness="1" MaxHeight="200" Source="{Binding Source, DataType=vm:SortPresetsDialogViewModel, Mode=OneWay}" CanUserResizeColumns="False" CanUserSortColumns="False">
+					<TreeDataGrid Grid.Column="0" CornerRadius="5" BorderBrush="#646464" BorderThickness="1" MaxHeight="200" Source="{Binding Source, DataType=vm:SortAtisStationsDialogViewModel, Mode=OneWay}" CanUserResizeColumns="False" CanUserSortColumns="False">
 						<TreeDataGrid.Styles>
 							<Style Selector="TreeDataGrid /template/ Border#ColumnHeadersPresenterBorder">
 								<Setter Property="IsVisible" Value="False"/>
@@ -43,8 +43,8 @@
 					</TreeDataGrid>
 					<!--Up/Down Buttons-->
 					<StackPanel Grid.Column="2" Orientation="Vertical" Spacing="5">
-						<Button Theme="{StaticResource Dark}" Command="{Binding MovePresetUpCommand, DataType=vm:SortPresetsDialogViewModel}">Up</Button>
-						<Button Theme="{StaticResource Dark}" Command="{Binding MovePresetDownCommand, DataType=vm:SortPresetsDialogViewModel}">Down</Button>
+						<Button Theme="{StaticResource Dark}" Command="{Binding MoveStationUpCommand, DataType=vm:SortAtisStationsDialogViewModel}">Up</Button>
+						<Button Theme="{StaticResource Dark}" Command="{Binding MoveStationDownCommand, DataType=vm:SortAtisStationsDialogViewModel}">Down</Button>
 					</StackPanel>
 				</Grid>
 			</StackPanel>
