--- a/vATIS.Desktop/Ui/Dialogs/ReleaseNotesDialog.axaml
+++ b/vATIS.Desktop/Ui/Dialogs/ReleaseNotesDialog.axaml
@@ -5,32 +5,56 @@
         xmlns:mdxaml="https://github.com/whistyun/Markdown.Avalonia"
         xmlns:vm="using:Vatsim.Vatis.Ui.ViewModels"
         xmlns:ctxt="clr-namespace:ColorTextBlock.Avalonia;assembly=ColorTextBlock.Avalonia"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d"
         x:Class="Vatsim.Vatis.Ui.Dialogs.ReleaseNotesDialog"
+        x:Name="Window"
         Title="Release Notes"
-        Width="600" Height="500"
+        Width="700" Height="475"
         WindowStartupLocation="CenterOwner"
         CanResize="False"
         ShowInTaskbar="False"
         SystemDecorations="None"
         TransparencyLevelHint="Transparent"
         Background="Transparent">
-    <Border BorderBrush="#646464" BorderThickness="1" Background="#1E1E1E" CornerRadius="5">
-        <Grid RowDefinitions="*,10,Auto" Margin="15">
-            <mdxaml:MarkdownScrollViewer Grid.Row="0" Margin="0 -10 0 0" Markdown="{Binding ReleaseNotes, DataType=vm:ReleaseNotesDialogViewModel}">
-                <mdxaml:MarkdownScrollViewer.Styles>
-                    <Style Selector="ctxt|CTextBlock.Heading1">
-                        <Setter Property="Foreground" Value="White"/>
-                        <Setter Property="FontSize" Value="28"/>
-                        <Setter Property="HorizontalAlignment" Value="Center"/>
-                    </Style>
-                    <Style Selector=".List ctxt|CTextBlock">
-                        <Setter Property="FontSize" Value="18"/>
-                    </Style>
-                </mdxaml:MarkdownScrollViewer.Styles>
-            </mdxaml:MarkdownScrollViewer>
-            <Button Grid.Row="2" Theme="{StaticResource Dark}" FontSize="24" HorizontalAlignment="Stretch" Content="CLOSE" Click="CloseWindow"/>
+    <Border BorderBrush="#646464" BorderThickness="1" Background="#1E1E1E" CornerRadius="5" ClipToBounds="True">
+        <Grid RowDefinitions="40,*,Auto">
+            <Border CornerRadius="5,5,0,0" Background="#1E1E1E" Height="40" Grid.Row="0">
+                <Grid ColumnDefinitions="1*,1*">
+                    <TextBlock Text="Release Notes" Padding="5" Margin="5,0,0,0" VerticalAlignment="Center" Foreground="#F0F0F0" FontWeight="Medium" FontSize="14" Grid.Column="0" />
+                    <Button Grid.Column="1" Theme="{StaticResource CloseButton}" HorizontalAlignment="Right" Margin="0,0,10,0" Command="{Binding CloseWindowCommand, DataType=vm:ReleaseNotesDialogViewModel}" CommandParameter="{Binding ElementName=Window}"/>
+                </Grid>
+            </Border>
+            <Panel Grid.Row="1" Background="#323232">
+                <mdxaml:MarkdownScrollViewer Markdown="{Binding ReleaseNotes, DataType=vm:ReleaseNotesDialogViewModel}" Margin="10" ScrollViewer.AllowAutoHide="False">
+                    <mdxaml:MarkdownScrollViewer.Styles>
+                        <Style Selector=".Markdown_Avalonia_MarkdownViewer ctxt|CTextBlock.Heading1">
+                            <Setter Property="FontSize" Value="28"/>
+                        </Style>
+                        <Style Selector=".Markdown_Avalonia_MarkdownViewer ctxt|CTextBlock.Heading2">
+                            <Setter Property="FontSize" Value="24"/>
+                        </Style>
+                        <Style Selector=".Markdown_Avalonia_MarkdownViewer ctxt|CTextBlock.Heading3">
+                            <Setter Property="FontSize" Value="18"/>
+                        </Style>
+                        <Style Selector=".Markdown_Avalonia_MarkdownViewer .List ctxt|CTextBlock">
+                            <Setter Property="FontSize" Value="14"/>
+                        </Style>
+                        <Style Selector=".Markdown_Avalonia_MarkdownViewer ctxt|CHyperlink">
+                            <Style.Setters>
+                                <Setter Property="IsUnderline" Value="False" />
+                                <Setter Property="Foreground" Value="#3574F0" />
+                            </Style.Setters>
+                        </Style>
+                        <Style Selector=".Markdown_Avalonia_MarkdownViewer ctxt|CHyperlink:pointerover">
+                            <Setter Property="Foreground" Value="#3574F0" />
+                        </Style>
+                    </mdxaml:MarkdownScrollViewer.Styles>
+                </mdxaml:MarkdownScrollViewer>
+            </Panel>
+            <Grid Grid.Row="2" ColumnDefinitions="*,Auto" Margin="10">
+                <CheckBox Grid.Column="0" VerticalAlignment="Center" Theme="{StaticResource CheckBox}" Content="Don't show this window after future updates." IsChecked="{Binding SuppressReleaseNotes, DataType=vm:ReleaseNotesDialogViewModel}" />
+                <Button Grid.Column="1" VerticalAlignment="Center" Theme="{StaticResource Dark}" FontSize="14" Content="Close Release Notes" Click="CloseWindow"/>
+            </Grid>
         </Grid>
     </Border>
 </Window>
-
