--- a/vATIS.Desktop/Ui/AtisConfiguration/SandboxView.axaml
+++ b/vATIS.Desktop/Ui/AtisConfiguration/SandboxView.axaml
@@ -23,7 +23,7 @@
 		</Grid>
 		<Grid ColumnDefinitions="Auto,1*">
 			<TextBlock Grid.Column="0" Text="Preset:" VerticalAlignment="Center" Margin="0,0,10,0"/>
-			<ComboBox Grid.Column="1" Name="SandboxSelectedPreset" Classes="Dark" HorizontalAlignment="Stretch" VerticalAlignment="Center" ItemsSource="{Binding Presets, DataType=vm:SandboxViewModel}" SelectedItem="{Binding SelectedPreset, DataType=vm:SandboxViewModel}">
+			<ComboBox Grid.Column="1" Name="SandboxSelectedPreset" Classes="Dark" HorizontalAlignment="Stretch" VerticalAlignment="Center" ItemsSource="{Binding Presets, DataType=vm:SandboxViewModel}" SelectedItem="{Binding SelectedPreset, DataType=vm:SandboxViewModel, Mode=OneWay}">
 				<ComboBox.ItemTemplate>
 					<DataTemplate>
 						<TextBlock Text="{Binding}" />
@@ -31,7 +31,7 @@
 				</ComboBox.ItemTemplate>
 				<Interaction.Behaviors>
 					<RoutedEventTriggerBehavior RoutedEvent="{x:Static SelectingItemsControl.SelectionChangedEvent}" SourceInteractive="SandboxSelectedPreset">
-						<InvokeCommandAction Command="{Binding SelectedPresetChangedCommand, DataType=vm:SandboxViewModel}"/>
+						<InvokeCommandAction Command="{Binding SelectedPresetChangedCommand, DataType=vm:SandboxViewModel}" CommandParameter="{Binding #SandboxSelectedPreset.SelectedItem}"/>
 					</RoutedEventTriggerBehavior>
 				</Interaction.Behaviors>
 			</ComboBox>
